--- a/design/style.css
+++ b/design/style.css
@@ -122,3 +122,17 @@ th{
     grid-column: 2;
     grid-row: 4;
 }
+
+@media screen and (min-width: 375px) and (max-width: 768px){
+    body{
+background-color: white;
+box-sizing: border-box;
+width: 100%;
+margin: 0;
+}
+img{
+width: 100vw;
+margin: 0;
+border-radius: 0%;
+}
+}
